jilles      2005/12/26 13:48:39 UTC	(20051226-4195)
  Log:
  Allow specifying the pid file with -p <file>.
  Default is var/atheme.pid (relative to prefix) as before.
  

  Changes:	Modified:
  +12 -6	trunk/dist/atheme.chk (File Modified) 
  +11 -6	trunk/src/atheme.c (File Modified) 


w00t        2005/12/26 08:41:30 UTC	(20051226-4193)
  Log:
  Actually, InspIRCd support is b6 and later

  Changes:	Modified:
  +1 -1		trunk/dist/example.conf (File Modified) 
  +1 -1		trunk/dist/example.userserv.conf (File Modified) 


jilles      2005/12/26 00:04:17 UTC	(20051226-4191)
  Log:
  Regenerate configure.
  

  Changes:	Modified:
  +12 -4	trunk/configure (File Modified) 


jilles      2005/12/26 00:02:24 UTC	(20051226-4189)
  Log:
  - Use ${prefix}/share/doc/atheme and ${prefix}/share/atheme/help for
    documentation and help files respectively for --enable-fhs-paths
  - Don't delete old help/doc stuff
  - Install atheme.chk file to atheme.chk.sample instead.
  

  Changes:	Modified:
  +6 -0		trunk/Makefile.in (File Modified) 
  +6 -0		trunk/backend/Makefile.in (File Modified) 
  +7 -1		trunk/configure.ac (File Modified) 
  +6 -0		trunk/contrib/Makefile.in (File Modified) 
  +6 -0		trunk/crypto/Makefile.in (File Modified) 
  +6 -0		trunk/dbtool/Makefile.in (File Modified) 
  +6 -0		trunk/libatheme/Makefile.in (File Modified) 
  +6 -0		trunk/modules/Makefile.in (File Modified) 
  +6 -0		trunk/modules/chanserv/Makefile.in (File Modified) 
  +6 -0		trunk/modules/global/Makefile.in (File Modified) 
  +6 -0		trunk/modules/helpserv/Makefile.in (File Modified) 
  +6 -0		trunk/modules/memoserv/Makefile.in (File Modified) 
  +6 -0		trunk/modules/nickserv/Makefile.in (File Modified) 
  +6 -0		trunk/modules/operserv/Makefile.in (File Modified) 
  +6 -0		trunk/modules/userserv/Makefile.in (File Modified) 
  +6 -0		trunk/modules/xmlrpc/Makefile.in (File Modified) 
  +6 -0		trunk/protocol/Makefile.in (File Modified) 
  +11 -14	trunk/src/Makefile.in (File Modified) 